jade mistake, alpha script published, and plan implicitly leaked

--- a/sections/generic.jade
+++ b/sections/generic.jade
@@ -1,16 +1,132 @@
-extend default
+extend skeleton
 
-h3
-  generic
-block content
-  p.
-    Lorem ipsum dolor sit amet, pri tacimates salutatus forensibus ea. Sit ceteros hendrerit
-    consequuntur an, dicta tibique eu vis. Habeo impetus comprehensam te nam, in sit feugait
-    principes. Cibo possit oblique qui cu, aperiri vivendum sed ne. Minim repudiare ne cum,
-    ex graeco quodsi ius.
+block some
+  h1 (class=fontana)
+    ciao this is Oh-OH!
+
+block what
 
   p.
-    Epicurei constituam sed at, id placerat similique tincidunt eam. Te quas inermis nominavi
-    vel, in sea erant debitis reformidans, an cum eripuit democritum. Usu modus primis et, his
-    errem scripserit cu. Mea cu aperiri repudiandae, id sit offendit noluisse torquatos. Sit
-    te suas fastidii, cum nonumy iriure maluisset at, vix te graeco moderatius argumentum.
+    The filter bubble is a virtual cage for your immagination
+
+  p.
+    The filter bubble is personal and subjective: you can't see it on your own, you need to compare it with others, to understand what Facebook is penalizing and promoting
+
+  p.
+    This project is a collective experiment, as network users we can extract meta-data of what Facebook is doing to us, and reverse their algorithm.
+    
+
+block how
+
+  p.
+    Install the addons: for Firefox use 
+
+    a(href="https://addons.mozilla.org/en-US/firefox/addon/greasemonkey/") Greasemonkey
+    , for Chrome
+
+    a(href="https://chrome.google.com/webstore/detail/tampermonkey/dhdgffkkebhmkfjojejmpbldmpobfkfo") Tampermonkey
+    and for Opera, you have 
+
+    a(href="https://addons.opera.com/extensions/details/violent-monkey/") Violentmonkey
+
+
+  p.
+    Install the facebook.tracking.exposed script:
+    Open 
+    a(href="https://facebook.tracking.exposed/facebook.tracking.exposed.user.js") this link
+    and if you have installed the add-ons properly, the script will be active automatically.
+     
+  p.
+    When you open Facebook page (not the App, the Browser page), you will send non-sensitive metadata to the project servers; You will have access to a personal page showing how Facebook messed up with your information order.
+
+
+block vision
+
+  p.
+    Invite new developers to contribute on the a(href="https://github.com/vecna/ESCVI") browser-side technology. 
+    I've to parse Facebook page, we can extract much more metadata to increase the analysis capability of the project
+
+  p.
+    I want to pay developers, researcher and advocate. But I've not money do to it, so I'll do a crowfunding campaign and a call for developers that can do some tasks.
+
+  p.
+    Reserch center are invited to run their own server, that can share data with mine, and they can offer resiliance, redundancy to the network, and keep my small server not overloaded. Contact me, we'll figure out some traffic balancing strategy.
+
+  h2.
+    The harsh truth
+
+  p.
+    I've a certain value in the IT market, but IT market most of the time exploit Rights or humans condition
+  p.
+    Find a politically sustainable way to manage users data, see the limit of centralisation without the Silicon Valley mind and challenge the network monopolies costs time and experience
+  p.
+    I've not the capacity to look for funding, because I'm mostly a tecnician, so, if you believe in this project, left a tip here
+
+block research
+
+  p
+    research TODO
+
+block contact
+
+  p.
+    a(href="https://twitter.com/_vecna") Claudio Agosti
+    , 
+    a(href="https://keybase.io/vecna") PGP key
+    I belong to the Hermes Center for transparency and digital human rights (in which we've done the anonymous whistleblowing framework
+    a(href="https://en.wikipedia.org/wiki/GlobaLeaks") GlobaLeaks
+    ), In the last two years I spend most of my time in 
+    a(href="https://tacticaltech.org") Tactical Tech
+
+  p.smaller
+      Despite I've shared above my Twitter account, I don't want endorse centralized services, but in this phase I see the compromise between an huge outreach and the practical tool that has became standard de facto. Soon or later will be published a personal policy in identity compartimentalisation
+    
+  p.
+    I'm in love with technopolitics, I believe in the 2016 the goal of a cipherpunk is not anymore encrypt evertything, because 
+    a(href="https://medium.com/@_vecna/whatsapp-security-santa-or-cryptography-as-cost-reduction-40a201b46708") Encryption is a Cost reduction for transnational corporations
+
+  p.
+    Challenge the network monopolies, challenge the massive profiling and the business dynamics supporting these, is what I like to do and what I hope the most human respectful culture, in which I got the lucky to born, will provide some meaningful direction for this Technological orgy knows as Internet
+
+
+block moar
+
+a collection of links related on the subject, not coherent nor complete    )     
+  p
+    Now, collectively we can see that, Filter bubble is a personal issue and a social issue: our society is undefended against an entity that can influence our learning process.
+
+    a(href="https://theintercept.com/2016/06/09/facebook-outreach-tool-ignores-black-lives-matter/")
+      SOME
+    , 
+    a(href="https://www.theguardian.com/technology/2016/jun/07/its-your-duty-to-complain-thats-how-companies-improve") 
+      SOME
+    , 
+    a(href="https://hbr.org/2015/05/customer-data-designing-for-transparency-and-trust")
+      This article speaks on customers data
+    , I share some points of this vision, I want to see a business model accessible to everyone on data analysis, and an OpenData regulation making clear which data are collected, how many, and which algorithms runs over the data.
+
+    a(href="http://arxiv.org/abs/1606.08813") 
+      EU regulations on algorithmic decision-making and a right to explanation
+    , 
+    a(href="http://www.recode.net/2016/6/14/11923286/facebook-emotional-contagion-controversy-data-research-review-policy-ethics")
+      How Facebook's emotional contagion controversy led to the company's new research review policy
+    , 
+    a(href="https://auditingalgorithms.wordpress.com/background-readings/")
+      Auding Algorithm, I've still to read them
+    , 
+    a(href="https://www.technologyreview.com/s/601696/facebooks-rules-for-experimenting-on-you/")
+      Facebook rules on experimenting on you, or at least what they decided can tell you
+    , 
+    a(href="http://www.hackerfactor.com/blog/index.php?/archives/726-Facebook-Tracking.html")
+      Technical analysis of Facebook tracking
+    , 
+    a(href="https://digitalmarketplace.blog.gov.uk/2016/06/16/an-open-standard-for-public-procurement-and-contracting-data/")
+      Vagously related
+    , 
+    a(href="http://mobile.reuters.com/article/idUSKCN0ZB00M")
+      Google, Facebook quietly move toward automatic blocking of extremist videos
+    , 
+    a(href="http://www.bloomberg.com/view/articles/2016-07-05/facebook-is-bad-for-democracy")
+      Facebook is bad for Democracy 
+
+
