--- a/sections/US.jade
+++ b/sections/US.jade
@@ -1,16 +1,9 @@
-extend default
+extend skeleton
 
-h2
-  US
 block content
-  p.
-    Lorem ipsum dolor sit amet, pri tacimates salutatus forensibus ea. Sit ceteros hendrerit
-    consequuntur an, dicta tibique eu vis. Habeo impetus comprehensam te nam, in sit feugait
-    principes. Cibo possit oblique qui cu, aperiri vivendum sed ne. Minim repudiare ne cum,
-    ex graeco quodsi ius.
 
-  p.
-    Epicurei constituam sed at, id placerat similique tincidunt eam. Te quas inermis nominavi
-    vel, in sea erant debitis reformidans, an cum eripuit democritum. Usu modus primis et, his
-    errem scripserit cu. Mea cu aperiri repudiandae, id sit offendit noluisse torquatos. Sit
-    te suas fastidii, cum nonumy iriure maluisset at, vix te graeco moderatius argumentum.
+  p
+    Do you thing Facebook is promoting Clinton or Trump ?
+
+  p
+    Filter Bubble is perceived as a personal problem (the social network don't let you challenge your belief) but for the undecided, for the young, the seeker and the curious, filter bubble represent a limit of your freedom, of your ability to get new informations
