--- a/styles/index.styl
+++ b/styles/index.styl
@@ -8,17 +8,37 @@
 body
   font-family 'Source Code Pro', monospace
 
-.header
-  background url('https://images.unsplash.com/photo-1451337516015-6b6e9a44a8a3?crop=entropy&fit=crop&fm=jpg&h=975&ixjsv=2.1.0&ixlib=rb-0.3.5&q=80&w=1925')
-  background-position center
+.header-fb-color
+  background-color #3b5999
 
-  .page-title
-    font-weight 200
-    font-size 80px
-    text-align center
-    padding 100px
-    text-transform uppercase
-    color #fff
+.head-text
+  font-weight 800
+  font-size 50px
+  text-align center
+  padding 40px
+  text-transform uppercase
+  color #fff
+
+.propaganda
+  padding-right 10% 
+  padding-left 10%
+  padding-top 2%
+  padding-bottom 2%
+  border-bottom black 1em solid
+
+  p::first-letter 
+    font-weight bold
+    font-size 1.4em
+    color #3b5999
+
+.smaller
+  font-size 0.75em
+  color darkgrey
+
+.line
+  background #3b5999
+  text-align center
+  color #334455
 
 .nav
   background #000
@@ -54,3 +74,7 @@ body
   p
     color #444
     font-size 12px
+
+.fontana
+  font-family: museo-slab,Georgia,"Times New Roman",Times,serif  
+
