progress in text, removed autoscroll feat

--- a/sections/skeleton.jade
+++ b/sections/skeleton.jade
@@ -7,14 +7,14 @@ html
   
     .header-fb-color
       h1.head-text facebook.tracking.exposed
+      p.smile α-stage: concept 90% ⌁ infrastructure 10% ⌁ UX 10% ⌁ morale 100% ⌁ stability LOW
 
     ul.nav
       li:   a(href='#what')      what
       li:   a(href='#how')       use it
       li:   a(href='#vision')    vision
-      li:   a(href='#research')  research
-      li:   a(href='#contact')   contact
       li:   a(href='#moar')      know more
+      li:   a(href='#contact')   contact
 
     div#what
       div.propaganda
@@ -28,21 +28,16 @@ html
       div.propaganda
         block vision
 
-    div#research
+    div#moar
       div.propaganda 
-        block research
+        block moar
 
     div#contact
       div.propaganda
         block contact
 
-    div#moar
-      div.propaganda 
-        block moar
-
-    div.footer
-      facebook.tracking.exposed is part of the tracking.exposed project 
-      span.smaller
-        still incomplete on summer 2016
-      , is the continuation of a(href="https://trackography.org" ) Trackography
+    div.footer facebook.tracking.exposed is part of the tracking.exposed project 
+      span.smaller still incomplete on summer 2016
+      , is the continuation of 
+      a(href='https://trackography.org') Trackography
       , but unfunded and on steroid
