--- a/styles/index.styl
+++ b/styles/index.styl
@@ -24,7 +24,7 @@ body
   padding-left 10%
   padding-top 2%
   padding-bottom 2%
-  border-bottom black 1em solid
+  border-bottom #3b5999 0.7em solid
 
   p::first-letter 
     font-weight bold
@@ -35,10 +35,34 @@ body
   font-size 0.75em
   color darkgrey
 
+.smile
+  text-align center
+  color #fff
+  font-family Arial
+  font-size 0.6em
+
+.harsh
+  text-align right
+  color #3b5999
+
 .line
   background #3b5999
   text-align center
   color #334455
+
+.link
+  padding 3px
+  font-size 0.9em
+
+.right
+  border-right 8%
+  text-align right
+  background #E8FFC2
+
+.left
+  text-align left
+  border-left 8%
+  background #DCEFE8
 
 .nav
   background #000
