--- a/sections/generic.jade
+++ b/sections/generic.jade
@@ -1,132 +1,107 @@
 extend skeleton
 
-block some
-  h1 (class=fontana)
-    ciao this is Oh-OH!
-
 block what
 
-  p.
-    The filter bubble is a virtual cage for your immagination
+  p The filter bubble is a virtual cage for your immagination.
 
-  p.
-    The filter bubble is personal and subjective: you can't see it on your own, you need to compare it with others, to understand what Facebook is penalizing and promoting
+  p The filter bubble is personal and subjective: you can't see it on your own until you're inside. You need to compare it in a masses, to understand what Facebook is penalizing and promoting
 
-  p.
-    This project is a collective experiment, as network users we can extract meta-data of what Facebook is doing to us, and reverse their algorithm.
+  p This project is a simple but effective experiment, I want find more users willingful to join this network. No harm can be done do your facebook account by facebook (you are not violating a Term of Service).
     
-
+  p Joining facebook.tracking.exposed, you can extract the meta-data of what Facebook is giving to you, and thus an open community of researcher can
+    b  reverse engineer 
+  |Facebook algorithm. It would be hard, but is a beginning.
+    
 block how
 
-  p.
-    Install the addons: for Firefox use 
-
-    a(href="https://addons.mozilla.org/en-US/firefox/addon/greasemonkey/") Greasemonkey
-    , for Chrome
-
+  p 1. Install the extension, for Chrome is 
     a(href="https://chrome.google.com/webstore/detail/tampermonkey/dhdgffkkebhmkfjojejmpbldmpobfkfo") Tampermonkey
-    and for Opera, you have 
+    |.
 
-    a(href="https://addons.opera.com/extensions/details/violent-monkey/") Violentmonkey
+  p 2. Install the 
+    b facebook.tracking.exposed script
+    |, just click 
+    a(href="https://facebook.tracking.exposed/facebook.tracking.exposed.user.js") here
+  .smaller If you want know more, you are installing an 
+    a(href="https://openuserjs.org/about/Userscript-Beginners-HOWTO") UserScript
+    |.
+  
+  p Done! if something is not working, tap here to get more support (TODO)
 
-
-  p.
-    Install the facebook.tracking.exposed script:
-    Open 
-    a(href="https://facebook.tracking.exposed/facebook.tracking.exposed.user.js") this link
-    and if you have installed the add-ons properly, the script will be active automatically.
-     
-  p.
-    When you open Facebook page (not the App, the Browser page), you will send non-sensitive metadata to the project servers; You will have access to a personal page showing how Facebook messed up with your information order.
+  p Now, when you open Facebook page (only in the browser in which you put the tools above, not in the mobile app), you will send non-sensitive metadata to the project servers; You will have access to a personal page showing how Facebook messed up with your information order. 
+    b. TODO: I've to make appear some icon.
 
 
 block vision
 
-  p.
-    Invite new developers to contribute on the a(href="https://github.com/vecna/ESCVI") browser-side technology. 
+  p Researcher, Analyst can use the API to research on the Filter Bubble, 
+    b No payment access will be ever demanded
+  , but considering we are challenging one of the wealthiest concept of the last decades, consider cooperation.
+  p Structures with money can run their own server and offload mine. I want make public resource of what can be considered one of the secret power of this Internet world, partecipating in the network don't provice any special benefit beside a faster access.
+
+  p New developers can contribute on extracting more meta-data from the Facebook page. We can't use official API, and the scraping can become more reliable, look at it: 
+    a(href="https://github.com/vecna/ESCVI") browser-side technology. 
     I've to parse Facebook page, we can extract much more metadata to increase the analysis capability of the project
+  p.smaller 
+    I want pay developers, researcher and advocate. But this project is zero-funded right now. Maybe I'll crowfunding in the future, if someone want to think about it, I'll provide Open Data on how the project is doing.
+  p Advocate, Journalist and Technimagician: I want localize these pages and leverage on local troubles to promote the tech, for example, from US you'll se this page that instead of raising the abstract problem of the Filter Bubble, raising the queston if Facebook is promoting Trump or Clinton (TODO). Every nation can be cover in the same way, tap here (TODO) to tell me about new political declinations.
+    b  explain algorithms
+  |for example: which are the variables considered, what weight more in the final outcome. Algorithm discrimination will be an huge topic, and having ways to explain to non technical audience is necessary.
 
-  p.
-    I want to pay developers, researcher and advocate. But I've not money do to it, so I'll do a crowfunding campaign and a call for developers that can do some tasks.
-
-  p.
-    Reserch center are invited to run their own server, that can share data with mine, and they can offer resiliance, redundancy to the network, and keep my small server not overloaded. Contact me, we'll figure out some traffic balancing strategy.
-
-  h2.
-    The harsh truth
-
-  p.
-    I've a certain value in the IT market, but IT market most of the time exploit Rights or humans condition
-  p.
-    Find a politically sustainable way to manage users data, see the limit of centralisation without the Silicon Valley mind and challenge the network monopolies costs time and experience
-  p.
-    I've not the capacity to look for funding, because I'm mostly a tecnician, so, if you believe in this project, left a tip here
-
-block research
-
-  p
-    research TODO
 
 block contact
 
-  p.
+  p My name is 
     a(href="https://twitter.com/_vecna") Claudio Agosti
-    , 
-    a(href="https://keybase.io/vecna") PGP key
-    I belong to the Hermes Center for transparency and digital human rights (in which we've done the anonymous whistleblowing framework
+    | and my email is claudio@tracking.exposed
+    |, I belong to the Hermes Center for transparency and digital human rights (in which we've done the anonymous whistleblowing framework
     a(href="https://en.wikipedia.org/wiki/GlobaLeaks") GlobaLeaks
-    ), In the last two years I spend most of my time in 
-    a(href="https://tacticaltech.org") Tactical Tech
+    |). In the last two years I spend most of my time in 
+    a(href="https://tacticaltech.org") TacticalTech
 
-  p.smaller
-      Despite I've shared above my Twitter account, I don't want endorse centralized services, but in this phase I see the compromise between an huge outreach and the practical tool that has became standard de facto. Soon or later will be published a personal policy in identity compartimentalisation
-    
-  p.
-    I'm in love with technopolitics, I believe in the 2016 the goal of a cipherpunk is not anymore encrypt evertything, because 
-    a(href="https://medium.com/@_vecna/whatsapp-security-santa-or-cryptography-as-cost-reduction-40a201b46708") Encryption is a Cost reduction for transnational corporations
+  p.smaller Despite I've shared above my Twitter account, I don't want endorse centralized services, but in this phase I see the compromise between an huge outreach and the practical tool that has became standard de facto. Soon or later will be published a personal policy in identity compartimentalisation.
+  p I'm in love with technopolitics, I believe in the 2016 the goal of a cipherpunk is not anymore "encrypt evertything". The power dynamics online are changed since the early '00; Now transnational corporation use 
+    a(href='https://medium.com/@_vecna/whatsapp-security-santa-or-cryptography-as-cost-reduction-40a201b46708') crypto as cost reduction
+    |, the challenges are others.
+  p Challenge the network monopolies, challenge the massive profiling and the business dynamics supporting these, is my primary concern now. Telco, Big Data Industries and Nations are in fight against themselves. This offer new opening for users, in this malebolge, we have at least to guarantee the preservation of human rights in the Internet, challenging abuses when they raises
+  p It is clear that the speed of institution is The tools are a mix of technology, political activism and network sense
 
-  p.
-    Challenge the network monopolies, challenge the massive profiling and the business dynamics supporting these, is what I like to do and what I hope the most human respectful culture, in which I got the lucky to born, will provide some meaningful direction for this Technological orgy knows as Internet
-
+  h3.harsh The harsh truth ;)
+  p I've not the capacity to look for funding. I'm (mostly) a tecnician and write funding requests is not exactly my best way to invest time. If you believe in this project, consider tip here (TODO donation page), or do some kind of fundraising.
 
 block moar
 
-a collection of links related on the subject, not coherent nor complete    )     
-  p
-    Now, collectively we can see that, Filter bubble is a personal issue and a social issue: our society is undefended against an entity that can influence our learning process.
+  p Filter Bubble is more a social issue than a personal issue: you can do effort in escape, and actively keep in mind that exist, but these are a minority questioning what they are perceiveing. 
+  P The society is undefended against an entity that can influence our learning process, so
+  p What I want: having only chronological unfiltered content. Will be client side the decision of which algorithms, visualisation, correlation, suggestions and meta-data will be considered. User choice.
 
-    a(href="https://theintercept.com/2016/06/09/facebook-outreach-tool-ignores-black-lives-matter/")
-      SOME
-    , 
-    a(href="https://www.theguardian.com/technology/2016/jun/07/its-your-duty-to-complain-thats-how-companies-improve") 
-      SOME
-    , 
-    a(href="https://hbr.org/2015/05/customer-data-designing-for-transparency-and-trust")
-      This article speaks on customers data
-    , I share some points of this vision, I want to see a business model accessible to everyone on data analysis, and an OpenData regulation making clear which data are collected, how many, and which algorithms runs over the data.
+  .link.right 
+    a(href="https://medium.com/message/ferguson-is-also-a-net-neutrality-issue-6d2f3db51eb0") Ferguson crisis and how Facebook penalize content 
+    .smaller (6 minutes reading) by 
+      a(href="https://twitter.com/zeynep") Zeynep Tufekci
+    |It is good that a person like the author pose herself the question: but what about all the things you are not an expert? or you are not actively looking to know more? All that times, you'll just don't notice how Filter Bubble manipulate you.
+  .link.left 
+    a(href="https://theintercept.com/2016/06/09/facebook-outreach-tool-ignores-black-lives-matter/") SOME
+  .link.right 
+    a(href="https://www.theguardian.com/technology/2016/jun/07/its-your-duty-to-complain-thats-how-companies-improve") SOME
+  .link.left 
+    a(href="https://hbr.org/2015/05/customer-data-designing-for-transparency-and-trust") This article speaks on customers data 
+    |I share some points of this vision, I want to see a business model accessible to everyone on data analysis, and an OpenData regulation making clear which data are collected, how many, and which algorithms runs over the data.
 
-    a(href="http://arxiv.org/abs/1606.08813") 
-      EU regulations on algorithmic decision-making and a right to explanation
-    , 
-    a(href="http://www.recode.net/2016/6/14/11923286/facebook-emotional-contagion-controversy-data-research-review-policy-ethics")
-      How Facebook's emotional contagion controversy led to the company's new research review policy
-    , 
-    a(href="https://auditingalgorithms.wordpress.com/background-readings/")
-      Auding Algorithm, I've still to read them
-    , 
-    a(href="https://www.technologyreview.com/s/601696/facebooks-rules-for-experimenting-on-you/")
-      Facebook rules on experimenting on you, or at least what they decided can tell you
-    , 
-    a(href="http://www.hackerfactor.com/blog/index.php?/archives/726-Facebook-Tracking.html")
-      Technical analysis of Facebook tracking
-    , 
-    a(href="https://digitalmarketplace.blog.gov.uk/2016/06/16/an-open-standard-for-public-procurement-and-contracting-data/")
-      Vagously related
-    , 
-    a(href="http://mobile.reuters.com/article/idUSKCN0ZB00M")
-      Google, Facebook quietly move toward automatic blocking of extremist videos
-    , 
-    a(href="http://www.bloomberg.com/view/articles/2016-07-05/facebook-is-bad-for-democracy")
-      Facebook is bad for Democracy 
-
+  .link.right 
+    a(href="http://arxiv.org/abs/1606.08813") EU regulations on algorithmic decision-making and a right to explanation
+  .link.left 
+    a(href="http://www.recode.net/2016/6/14/11923286/facebook-emotional-contagion-controversy-data-research-review-policy-ethics") How Facebook's emotional contagion controversy led to the company's new research review policy
+  .link.right 
+    a(href="https://auditingalgorithms.wordpress.com/background-readings/") Auding Algorithm, I've still to read them
+  .link.left 
+    a(href="https://www.technologyreview.com/s/601696/facebooks-rules-for-experimenting-on-you/") Facebook rules on experimenting on you, or at least what they decided can tell you
+  .link.right 
+    a(href="http://www.hackerfactor.com/blog/index.php?/archives/726-Facebook-Tracking.html") Technical analysis of Facebook tracking
+  .link.left 
+    a(href="https://digitalmarketplace.blog.gov.uk/2016/06/16/an-open-standard-for-public-procurement-and-contracting-data/") Vagously related
+  .link.right 
+    a(href="http://mobile.reuters.com/article/idUSKCN0ZB00M") Google, Facebook quietly move toward automatic blocking of extremist videos
+  .link.left 
+    a(href="http://www.bloomberg.com/view/articles/2016-07-05/facebook-is-bad-for-democracy") Facebook is bad for Democracy 
 
