some improvement in text, app

--- a/sections/generic.jade
+++ b/sections/generic.jade
@@ -1,5 +1,9 @@
 extend skeleton
 
+block current
+
+  h3 Note: At the moment the server side is in development. Information collected will be lost. Still I need these, I'm analyzing my own timelines, but if you want partecipate, even better.
+
 block what
 
   p The filter bubble is a virtual cage for your immagination.
@@ -9,8 +13,8 @@ block what
   p This project is a simple but effective experiment, I want find more users willingful to join this network. No harm can be done do your facebook account by facebook (you are not violating a Term of Service).
     
   p Joining facebook.tracking.exposed, you can extract the meta-data of what Facebook is giving to you, and thus an open community of researcher can
-    b  reverse engineer 
-  |Facebook algorithm. It would be hard, but is a beginning.
+    b  analyze algorithm outcomes and keep Facebook accountable.
+  | It would be hard, but is a beginning.
     
 block how
 
@@ -36,8 +40,12 @@ block vision
 
   p Researcher, Analyst can use the API to research on the Filter Bubble, 
     b No payment access will be ever demanded
-  , but considering we are challenging one of the wealthiest concept of the last decades, consider cooperation.
-  p Structures with money can run their own server and offload mine. I want make public resource of what can be considered one of the secret power of this Internet world, partecipating in the network don't provice any special benefit beside a faster access.
+    | , but considering we are challenging one of the wealthiest concept of the last decades, consider cooperation.
+  p Structures with money can run their own server and offload mine. I want make public resource of what can be considered one of the secret power of this Internet world; If you partecipate in the network, you will not have any special benefit beside knowing how much Facebook has tampered your timeline. If you support with a server, you will just have a faster access for conducting research.
+
+  p Censoring content is much easier with filer bubble: if a content get takedown, it is clear to everybody. If a content get heavily penalized in the bubble logic, is "the Algorithm fault" 
+    b the perfect tecnocratic scapegoat
+    | , nobody has guilt. This project will act as a third party able to see how much content get faily seen by users.
 
   p New developers can contribute on extracting more meta-data from the Facebook page. We can't use official API, and the scraping can become more reliable, look at it: 
     a(href="https://github.com/vecna/ESCVI") browser-side technology. 
@@ -53,20 +61,22 @@ block contact
 
   p My name is 
     a(href="https://twitter.com/_vecna") Claudio Agosti
-    | and my email is claudio@tracking.exposed
-    |, I belong to the Hermes Center for transparency and digital human rights (in which we've done the anonymous whistleblowing framework
+    | you can reach me at claudio@tracking.exposed
+    |, I use to work on the anonymous whistleblowing framework
     a(href="https://en.wikipedia.org/wiki/GlobaLeaks") GlobaLeaks
-    |). In the last two years I spend most of my time in 
+    |), and in the last two years I spend most of my time in 
     a(href="https://tacticaltech.org") TacticalTech
 
   p.smaller Despite I've shared above my Twitter account, I don't want endorse centralized services, but in this phase I see the compromise between an huge outreach and the practical tool that has became standard de facto. Soon or later will be published a personal policy in identity compartimentalisation.
+
+  h4.harsh personal rant
   p I'm in love with technopolitics, I believe in the 2016 the goal of a cipherpunk is not anymore "encrypt evertything". The power dynamics online are changed since the early '00; Now transnational corporation use 
     a(href='https://medium.com/@_vecna/whatsapp-security-santa-or-cryptography-as-cost-reduction-40a201b46708') crypto as cost reduction
     |, the challenges are others.
   p Challenge the network monopolies, challenge the massive profiling and the business dynamics supporting these, is my primary concern now. Telco, Big Data Industries and Nations are in fight against themselves. This offer new opening for users, in this malebolge, we have at least to guarantee the preservation of human rights in the Internet, challenging abuses when they raises
   p It is clear that the speed of institution is The tools are a mix of technology, political activism and network sense
 
-  h3.harsh The harsh truth ;)
+  h4.harsh The harsh truth ;)
   p I've not the capacity to look for funding. I'm (mostly) a tecnician and write funding requests is not exactly my best way to invest time. If you believe in this project, consider tip here (TODO donation page), or do some kind of fundraising.
 
 block moar
