--- a/sections/skeleton.jade
+++ b/sections/skeleton.jade
@@ -16,6 +16,9 @@ html
       li:   a(href='#moar')      know more
       li:   a(href='#contact')   contact
 
+    div.propaganda
+      block current
+
     div#what
       div.propaganda
         block what 
