small update in text

--- a/sections/generic.jade
+++ b/sections/generic.jade
@@ -2,15 +2,17 @@ extend skeleton
 
 block current
 
-  h3 Note: At the moment the server side is in development. Information collected will be lost. Still I need these, I'm analyzing my own timelines, but if you want partecipate, even better.
+  h3.note Note: This is an unreleased in development project. If you get this link is because I know you directly, please don't share it yet because is incomplete. I'm looking for feedback, suggestions and I'm sure if you had this link is because you can provide valuable insight on this issue ;) Thanks
 
 block what
 
-  p The filter bubble is a virtual cage for your immagination.
+  p The filter bubble is a social problem, not a personal problem. The effect is in the massess misinformation, and only with a collective effort we can measure it, understand it, resist against it.
 
-  p The filter bubble is personal and subjective: you can't see it on your own until you're inside. You need to compare it in a masses, to understand what Facebook is penalizing and promoting
+  p The filter bubble is personal and subjective: you can't see it on your own because you're inside. Also, if you put attention on it, you'll probably have the knowledge to escape. Comparing your filter bubble with the multiture of user, we can understand the logic behind Facebook penalizing or promoting content.
 
-  p This project is a simple but effective experiment, I want find more users willingful to join this network. No harm can be done do your facebook account by facebook (you are not violating a Term of Service).
+  p Censoring content is much easier with algorithm than takedown: if a content get removed, it is clear to everybody. If a content get heavily penalized in the bubble logic, is "the Algorithm fault":
+    b the perfect tecnocratic scapegoat.
+    | In such case is nobody guilt. This project will act as a third party able to see how much content get faily seen by users.
     
   p Joining facebook.tracking.exposed, you can extract the meta-data of what Facebook is giving to you, and thus an open community of researcher can
     b  analyze algorithm outcomes and keep Facebook accountable.
@@ -40,12 +42,12 @@ block vision
 
   p Researcher, Analyst can use the API to research on the Filter Bubble, 
     b No payment access will be ever demanded
-    | , but considering we are challenging one of the wealthiest concept of the last decades, consider cooperation.
+    | , but considering we are challenging one of the wealthiest concept of the last decades, we've to deal distributing the effort in cooperation.
   p Structures with money can run their own server and offload mine. I want make public resource of what can be considered one of the secret power of this Internet world; If you partecipate in the network, you will not have any special benefit beside knowing how much Facebook has tampered your timeline. If you support with a server, you will just have a faster access for conducting research.
 
-  p Censoring content is much easier with filer bubble: if a content get takedown, it is clear to everybody. If a content get heavily penalized in the bubble logic, is "the Algorithm fault" 
-    b the perfect tecnocratic scapegoat
-    | , nobody has guilt. This project will act as a third party able to see how much content get faily seen by users.
+  p No private content are collected. No harm can be done do your facebook account by facebook. 
+    b You are not violating the Term of Service
+    | , and this technology is not using the Facebook API. Is only extracting metadata (what|when|where|why) of what you see in your timeline. Then researches can look for patterns, and you will get some stats (page still in TODO)
 
   p New developers can contribute on extracting more meta-data from the Facebook page. We can't use official API, and the scraping can become more reliable, look at it: 
     a(href="https://github.com/vecna/ESCVI") browser-side technology. 
