io sono tu sei egli è

--- a/sections/generic.jade
+++ b/sections/generic.jade
@@ -52,7 +52,8 @@ block vision
     | , and this technology is not using the Facebook API. Is only extracting metadata (what|when|where|why) of what you see in your timeline. Then researches can look for patterns, and you will get some stats (page still in TODO)
 
   p New developers can contribute on extracting more meta-data from the Facebook page. Scraping can be more reliable, look at the: 
-    a(href="https://github.com/vecna/ESCVI") browser-side technology. 
+    a(href="https://github.com/vecna/ESCVI") browser-side technology
+    |.
   p.smaller Please note, I wish to pay developers, researcher and advocate. But this project is zero-funded right now. Maybe I'll try crowfunding in the future, if someone want to think about it, I'll provide Open Data on how the project is doing.
   p Advocate, Journalist and Technimagician: I want localize these pages and leverage on local troubles to promote the tech, for example, from US you'll see this page that instead of raising the abstract problem of the Filter Bubble, raising the queston if Facebook is promoting Trump or Clinton (TODO). Every nation can be covered in the same way, tap here (TODO) to tell me about new political declinations.
   p Algorithms has to be explained and not treated as dark magic. Which are the variables considered? what weights more in the final outcome? Algorithm discrimination will be an huge topic, and having ways to be understood by non-technical audience is necessary considering that algoritm impact on everyone.
