--- a/sections/generic.jade
+++ b/sections/generic.jade
@@ -2,21 +2,21 @@ extend skeleton
 
 block current
 
-  h3.note Note: This is an unreleased in development project. If you get this link is because I know you directly, please don't share it yet because is incomplete. I'm looking for feedback, suggestions and I'm sure if you had this link is because you can provide valuable insight on this issue ;) Thanks
+  h3.note Note: This is an as yet unreleased project that is still in development. If you have received this link it is because I know you personally. Please don't share the link yet because the current website is still incomplete. I'm looking forward to hear your feedback and suggestions. I'm sure that if you have this link it is because you can provide valuable insight on this issue. ;) Thanks
 
 block what
 
-  p The filter bubble is a social problem, not a personal problem. The effect is in the massess misinformation, and only with a collective effort we can measure it, understand it, resist against it.
+  p The filter bubble is a social problem, not a personal one. The effect is the misinformation of the masses. Only through a collective effort we can measure the problem, understand it, and resist it.
 
-  p The filter bubble is personal and subjective: you can't see it on your own because you're inside. Also, if you put attention on it, you'll probably have the knowledge to escape. Comparing your filter bubble with the multiture of user, we can understand the logic behind Facebook penalizing or promoting content.
+  p The filter bubble is personal and subjective: You can't see it your own bubble because you're inside it. But, if you focus your attention on it, you can probably accumulate the knowledge to escape. By comparing your filter bubble with those of other users, you can start to understand the logic behind why Facebook penalizes or promotes certain content.
 
-  p Censoring content is much easier with algorithm than takedown: if a content get removed, it is clear to everybody. If a content get heavily penalized in the bubble logic, is "the Algorithm fault":
-    b the perfect tecnocratic scapegoat.
-    | In such case is nobody guilt. This project will act as a third party able to see how much content get faily seen by users.
+  p Censoring content through algorithms is much easier than taking it down: If certain content gets removed, this can be seen by everybody. Yet if certain content gets heavily penalized through the logic of the bubble, then it is only "the algorithm's fault":
+    b It is the perfect technocratic scapegoat.
+    | In such a case nobody is guilty. This project's aim is to act as a third party that is able to see how much and which content gets rarely seen by users.
 
-  p Joining facebook.tracking.exposed, you can extract the meta-data of what Facebook is giving to you, and thus an open community of researchers can
+  p By joining facebook.tracking.exposed, you can extract the meta-data that Facebook is giving you, and thus an open community of researchers can
     b  analyze algorithm outcomes and keep Facebook accountable.
-  | It would be hard, but is a beginning.
+  | It will be hard, but it is only the beginning.
     
 block how
 
@@ -33,30 +33,30 @@ block how
     a(href="https://openuserjs.org/about/Userscript-Beginners-HOWTO") UserScript
     |.
   
-  p Done! if something is not working, tap here to get more support (TODO)
+  p Done! If something is not working, tap here to get more support (TODO)
 
-  p Now, when you open the Facebook page (only in the browser in which you put the tools above, not in the mobile app), you will send non-sensitive metadata to the project servers; You will have access to a personal page showing how Facebook messed up with your information order. 
+  p Now, when you open the Facebook page (only in the browser in which you have installed the above tools, not in the mobile app), you will send non-sensitive metadata to the project servers. You will have access to a personal page showing how Facebook messes with your content and how it categorizes information and posts. 
     b. TODO: Show some icon.
 
 
 block vision
 
-  p Researchers can use the API to research on the Filter Bubble, 
-    b No payment access will be ever demanded
-    | , but considering we are challenging one of the wealthiest concept of the last decades, we've to deal distributing the effort in cooperation.
+  p Researchers can use the API to do research on the Filter Bubble. 
+    b No payment to access the website will ever be demanded
+    | , but considering we are challenging one of the wealthiest concepts of the last decades, we have to try to distribute the effort through cooperation.
 
-  p Structures with money can run their own server and offload mine. I want make public resource of what can be considered one of the secret power of this Internet world; If you partecipate in the network, you will not have any special benefit beside knowing how much Facebook has tampered your timeline. If you support with a server, you will just have a faster access for conducting research.
+  p Structures with money can run their own server and offload mine. I want to make a public resource of what can be considered one of the secret powers of this Internet world. If you participate in the network, you will not have any special benefit besides knowing how much Facebook has tampered with your timeline. If you want to support us with a server, you will simply have faster access for conducting your research.
 
-  p No private content are collected. No harm can be done do your facebook account by facebook. 
-    b You are not violating the Term of Service
-    | , and this technology is not using the Facebook API. Is only extracting metadata (what|when|where|why) of what you see in your timeline. Then researches can look for patterns, and you will get some stats (page still in TODO)
+  p No private content is collected. No harm can be done to your Facebook account by Facebook. 
+    b You are not violating the Terms of Service
+    | , and this technology is not using the Facebook API. It is only extracting metadata (what|when|where|why) of what you see in your timeline. This way researches can then look for patterns and you will receive some stats (page still in TODO)
 
-  p New developers can contribute on extracting more meta-data from the Facebook page. Scraping can be more reliable, look at the: 
+  p New developers can contribute to extracting more meta-data from the Facebook page. Scraping can be more reliable, look at the: 
     a(href="https://github.com/vecna/ESCVI") browser-side technology
     |.
-  p.smaller Please note, I wish to pay developers, researcher and advocate. But this project is zero-funded right now. Maybe I'll try crowfunding in the future, if someone want to think about it, I'll provide Open Data on how the project is doing.
-  p Advocate, Journalist and Technimagician: I want localize these pages and leverage on local troubles to promote the tech, for example, from US you'll see this page that instead of raising the abstract problem of the Filter Bubble, raising the queston if Facebook is promoting Trump or Clinton (TODO). Every nation can be covered in the same way, tap here (TODO) to tell me about new political declinations.
-  p Algorithms has to be explained and not treated as dark magic. Which are the variables considered? what weights more in the final outcome? Algorithm discrimination will be an huge topic, and having ways to be understood by non-technical audience is necessary considering that algoritm impact on everyone.
+  p.smaller Please note, I wish to pay developers, researchers, and advocates. But this project is zero-funded right now. Maybe I'll try crowfunding in the future, if someone wants to think about it, I'll provide Open Data on how the project is doing.
+  p Advocates, journalists, and technimagicians: I want to localize these pages and leverage on local troubles to promote the tech (don't understand the start of the sentence), for example, from US you'll see this page that instead of raising the abstract problem of the Filter Bubble, raising the queston if Facebook is promoting Trump or Clinton (TODO). Every nation can be covered in the same way, tap here (TODO) to tell me about new political declinations (what do you mean by this).
+  p Algorithms have to be explained and not treated as dark magic. Which are the variables considered? what weighs more in the final outcome? Algorithm discrimination will be a huge topic, and having ways to be understood by non-technical audiences is necessary considering the impact of algorithm on each one of us.
 
 block contact
 
@@ -65,39 +65,39 @@ block contact
     | you can reach me at claudio@tracking.exposed
     |, I used to work on the anonymous whistleblowing framework 
     a(href="https://en.wikipedia.org/wiki/GlobaLeaks") GlobaLeaks
-    |), and in the last two years I spend most of my time in 
+    |), and in the last two years I have spent most of my time at
     a(href="https://tacticaltech.org") TacticalTech.
 
-  p.smaller Despite me sharing my Twitter handle above, I don't want to endorse centralized services, but in this phase I see the compromise between an huge outreach and the practical tool that has became standard de facto. Soon or later will be published a personal policy in identity compartimentalisation.
+  p.smaller Despite me sharing my Twitter handle above, I don't want to endorse centralized services, but in this phase of the project I see the compromise one has to take between a huge outreach and the practical tool that has become the de facto standard. Sooner or later there will be published a personal policy in identity compartimentalisation (what does this sentence mean).
 
   h4.harsh personal rant
-  p I'm in love with technopolitics, I believe in the 2016 the goal of a cypherpunk is not anymore "encrypt evertything". The power dynamics online are changed since the early '00; Now transnational corporation use 
+  p I'm in love with technopolitics, I believe in 2016 the goal of a cypherpunk is no longer "encrypt evertything". The power dynamics online have changed since the early '00. Now transnational corporation use 
     a(href='https://medium.com/@_vecna/whatsapp-security-santa-or-cryptography-as-cost-reduction-40a201b46708') crypto as cost reduction
-    |, the challenges are others.
-  p Challenging the network monopolies, challenge the massive profiling and the business dynamics supporting these, is my primary concern now. Telco, Big Data industries and nations are in fight against themselves. This offers a new opening for users, in this malebolge, we have at least to guarantee the preservation of human rights in the Internet, challenging abuses when they arise.
-  p It is clear that the speed of institution is The tools are a mix of technology, political activism and network sense
+    |, the challenges nowadays are others.
+  p Challenging the network monopolies, challenging massive profiling, and the business dynamics supporting this, is my primary concern now. Telco, Big Data industries, and nations are in a fight against themselves. This offers a new opening for users, in this malebolge(what is this word?), we have to at least guarantee the preservation of human rights on the Internet and challenge abuses when they arise.
+  p It is clear that the speed of institution is <<- this sentence I do not understand, is it finished?) The tools are a mix of technology, political activism, and network sense (what does noetwork sense mean?).
 
   h4.harsh The harsh truth ;)
   p I do not have the capacity to look for funding. I'm (mostly) a technician, and writing funding requests is not exactly my best way to invest time. If you believe in this project, consider tipping here (TODO donation page), or do some kind of fundraising.
 
-block moar
+block moar (moar?)
 
-  p Filter Bubble is more a social issue than a personal issue: you can spend effort in escaping, and actively keep in mind that it exist, but this is a minority questioning what they are perceiveing. 
-  P The society is undefended against an entity that can influence our learning process, so
-  p What I want: having only chronological unfiltered content. The decision of which algorithms, visualisation, correlation, suggestions and meta-data will happen on the client side. User choice.
+  p The Filter Bubble is more of a social issue than a personal issue: You can spend effort to escape it, and actively keep in mind that it exists, but this is a minority questioning what they are perceiveing (what does the last sentence mean or relate to?). 
+  P Society is undefended against an entity that can influence our learning process, so
+  p What I want is: to have only chronologically unfiltered content. The decision of which algorithms, visualisations, correlations, suggestions, and meta-data will happen lies on the client's side. User choice.
 
   .link.right 
-    a(href="https://medium.com/message/ferguson-is-also-a-net-neutrality-issue-6d2f3db51eb0") Ferguson crisis and how Facebook penalize content 
+    a(href="https://medium.com/message/ferguson-is-also-a-net-neutrality-issue-6d2f3db51eb0") Ferguson crisis and how Facebook penalizes content 
     .smaller (6 minutes reading) by 
       a(href="https://twitter.com/zeynep") Zeynep Tufekci
-    |It is good that a person like the author pose herself the question: but what about all the things you are not an expert? Or you are not actively looking to know more? All those times, you will just not notice how the Filter Bubble manipulates you.
+    |It is good that a person like the author poses herself the question: But what about all the things you are not an expert in? Or you are not actively looking into knowing more? All those times, you will simply not notice how the Filter Bubble manipulates you.
   .link.left 
     a(href="https://theintercept.com/2016/06/09/facebook-outreach-tool-ignores-black-lives-matter/") SOME
   .link.right 
     a(href="https://www.theguardian.com/technology/2016/jun/07/its-your-duty-to-complain-thats-how-companies-improve") SOME
   .link.left 
-    a(href="https://hbr.org/2015/05/customer-data-designing-for-transparency-and-trust") This article speaks on customers data 
-    |I share some points of this vision, I want to see a business model accessible to everyone on data analysis, and an OpenData regulation making clear which data are collected, how many, and which algorithms runs over the data.
+    a(href="https://hbr.org/2015/05/customer-data-designing-for-transparency-and-trust") This article is on customers data 
+    |I share some points of this vision, I want to see a business model accessible to everyone on data analysis, and an OpenData regulation making clear which data are collected, how many, and which algorithms run over the data.
 
   .link.right 
     a(href="http://arxiv.org/abs/1606.08813") EU regulations on algorithmic decision-making and a right to explanation
@@ -106,11 +106,11 @@ block moar
   .link.right 
     a(href="https://auditingalgorithms.wordpress.com/background-readings/") Auding Algorithm, I've still to read them
   .link.left 
-    a(href="https://www.technologyreview.com/s/601696/facebooks-rules-for-experimenting-on-you/") Facebook rules on experimenting on you, or at least what they decided can tell you
+    a(href="https://www.technologyreview.com/s/601696/facebooks-rules-for-experimenting-on-you/") Facebook rules on experimenting on you, or at least what they decided they can tell you
   .link.right 
     a(href="http://www.hackerfactor.com/blog/index.php?/archives/726-Facebook-Tracking.html") Technical analysis of Facebook tracking
   .link.left 
-    a(href="https://digitalmarketplace.blog.gov.uk/2016/06/16/an-open-standard-for-public-procurement-and-contracting-data/") Vagously related
+    a(href="https://digitalmarketplace.blog.gov.uk/2016/06/16/an-open-standard-for-public-procurement-and-contracting-data/") Vaguely related
   .link.right 
     a(href="http://mobile.reuters.com/article/idUSKCN0ZB00M") Google, Facebook quietly move toward automatic blocking of extremist videos
   .link.left 
